# src/main/java/com/minclouds/model/CodeType.java
@@ -1,0 +1,6 @@
+package com.minclouds.model;
+
+public enum CodeType {
+    app,
+    all
+}
